# good-egg

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  good-egg.yml  release.yml
docs/: configuration.md  github-action.md  library.md  mcp-server.md  methodology.md  troubleshooting.md
examples/: .good-egg.yml  basic-workflow.yml  better-egg-workflow.yml  diet-egg-workflow.yml  library_usage.py  strict-workflow.yml
experiments/bot_detection/: BAD_EGG_VALIDATION.md  DOE.md  RED_TEAM_AUDIT.md  RESULTS.md  cache.py  checkpoint.py  embedding.py  llm_client.py  models.py  pipeline.py  pocket_veto_findings.md  study_config.yaml
experiments/bot_detection/data/: open_pr_activity.parquet  stage1_complete.json  stage2_complete.json  stage3_complete.json  stage4_complete.json
experiments/bot_detection/data/results/: SUMMARY.md  baseline_comparison.json  pocket_veto_analysis.json  statistical_tests.json
experiments/bot_detection/data/temporal_holdout/: account_age_unknown_experiment.json  advisory_score_experiment.json  aggregated_results.json  feature_ablation_experiment.json  hub_score_repo_experiment.json  hub_score_unknown_experiment.json  (+5 more)
experiments/bot_detection/proximity_results/: PROXIMITY_ANALYSIS.md  combined_results.json  graph_results.json  knn_results.json  llm_results.json
experiments/bot_detection/scripts/: backfill_embeddings.py  check_account_status.py  fetch_open_pr_activity.py  pocket_veto_analysis.py  smoke_test.py  verify_results.py
experiments/bot_detection/stages/: stage10_merge_rate_models.py  stage11_two_model_pipeline.py  stage12_knn_holdout.py  stage13_merge_prediction.py  stage14_advisory_score.py  stage15_feature_ablation.py  stage16_hub_score_repo.py  stage17_hub_score_unknown.py  stage18_recency_window.py  stage19_account_age.py  stage1_build_corpus.py  stage2_extract_signals.py  stage3_evaluate.py  stage4_baselines.py  stage5_author_features.py  stage6_llm_content.py  stage6_semi_supervised.py  stage6_time_series.py  stage6_title_analysis.py  stage7_author_evaluate.py  stage8_campaigns.py  stage9_temporal_holdout.py
experiments/bot_detection/tests/: test_author_evaluate.py  test_author_features.py  test_cache.py  test_evaluation.py  test_llm_content.py  test_models.py  test_network.py  test_semi_supervised.py  test_signals.py  test_time_series.py  test_title_analysis.py
experiments/validation/: DOE.md  ablations.py  checkpoint.py  embedding.py  models.py  pipeline.py  plots.py  repo_list.yaml  repo_list_full.yaml  requirements.txt  stats.py  study_config.yaml
experiments/validation/results/: BETTER_EGG.md  RED_TEAM_AUDIT.md  SUMMARY.md  pilot_report.md  statistical_tests.json
experiments/validation/scripts/: backfill_closed_prs.py  backfill_open_prs.py  backfill_pr_bodies.py  compare_similarity_methods.py  evaluate_rejection_awareness.py  evaluate_self_penalty.py  fetch_repo_readmes.py
experiments/validation/stages/: __init__.py  stage1_collect_prs.py  stage2_discover_authors.py  stage3_fetch_authors.py  stage4_score.py  stage5_features.py  stage6_analyze.py
experiments/validation/tests/: test_ablations.py  test_models.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py
scripts/: commit_stats.py  generate_language_multipliers.py  proximity_analysis.py  proximity_combined.py  proximity_common.py  proximity_graph_experiment.py  proximity_knn_experiment.py  proximity_llm_client.py  proximity_llm_experiment.py  train_v2_weights.py  validate_bad_egg_features.py  validate_scoring.py
src/good_egg/: __init__.py  __main__.py  action.py  cache.py  cli.py  config.py  exceptions.py  formatter.py  github_client.py  graph_builder.py  mcp_server.py  models.py  scorer.py
tests/: conftest.py  test_action.py  test_cache.py  test_cli.py  test_config.py  test_formatter.py  test_github_client.py  test_graph_builder.py  test_mcp_server.py  test_models.py  test_scorer.py
tests/fixtures/: pr_event.json  user_prs.json
validation/: validation_raw_20260209_192001.json  validation_raw_20260209_194747.json  validation_report_20260209_192001.md  validation_report_20260209_194747.md
(+19 files in other folders)
