[project]
name = "good-egg"
version = "0.1.0"
description = "Trust scoring for GitHub contributors using graph-based ranking on contribution graphs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "tenacity>=8.2",
    "mcp>=1.0",
]

[project.scripts]
good-egg = "good_egg.cli:main"
good-egg-mcp = "good_egg.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/good_egg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["good_egg.cache", "good_egg.github_client", "good_egg.scorer"]
warn_return_any = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.3",
    "mypy>=1.8",
    "pytest-cov>=4.1",
    "types-PyYAML>=6.0",
    "types-networkx>=3.2",
]
